--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/zooh?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=220563
+spring.datasource.password=random
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
+spring.jpa.hibernate.ddl-auto=update
